--- a/src/components/Portrait/index.css
+++ b/src/components/Portrait/index.css
@@ -9,4 +9,6 @@
   right: 0;
   bottom: 0;
   left: 0;
+  width: 100% !important;
+  height: 100% !important;
 }
