--- a/src/pages/Home/Intro.css
+++ b/src/pages/Home/Intro.css
@@ -6,15 +6,6 @@
   flex-direction: column;
   outline: none;
   position: relative;
-
-  &::after {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background: rgb(var(--rgbBackground) / 0.55);
-    pointer-events: none;
-    z-index: 1;
-  }
 }
 
 .intro__text {
@@ -22,7 +13,6 @@
   width: 100%;
   position: relative;
   top: calc(var(--spaceL) * -1);
-  z-index: 2;
 
   @media (--mediaDesktop) {
     & {
